parallelize tests across browsers

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <parallel>methods</parallel>
+                    <threadCount>100</threadCount>
+
+                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                </configuration>
+                <version>2.12.4</version>
+            </plugin>
         </plugins>
     </build>
 
