change to passing browser versions

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <parallel>methods</parallel>
+                    <parallel>both</parallel>
                     <threadCount>100</threadCount>
 
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
